--- a/app/src/main/res/layout/fragment_dob_input.xml
+++ b/app/src/main/res/layout/fragment_dob_input.xml
@@ -30,7 +30,8 @@
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="@dimen/_5sdp"
-            app:cardCornerRadius="@dimen/_20sdp">
+            app:cardCornerRadius="@dimen/_20sdp"
+            app:cardElevation="1dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
