--- a/app/src/main/res/layout/fragment_ethnicity_input.xml
+++ b/app/src/main/res/layout/fragment_ethnicity_input.xml
@@ -53,7 +53,8 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
-                    android:layout_margin="@dimen/_5sdp">
+                    android:layout_margin="@dimen/_5sdp"
+                    app:cardElevation="1dp">
                     <TextView
                         android:id="@+id/text_south_asian"
                         android:layout_width="match_parent"
@@ -75,7 +76,8 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
-                    android:layout_margin="@dimen/_5sdp">
+                    android:layout_margin="@dimen/_5sdp"
+                    app:cardElevation="1dp">
                     <TextView
                         android:id="@+id/text_east_asian"
                         android:layout_width="match_parent"
@@ -102,6 +104,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_african_american"
@@ -124,6 +127,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_black"
@@ -151,6 +155,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_latinx"
@@ -173,6 +178,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_pacific_islander"
@@ -200,6 +206,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_american_indian"
@@ -222,6 +229,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_hispanic"
@@ -248,6 +256,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_white"
@@ -270,6 +279,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_others"
