--- a/app/src/main/res/layout/fragment_gender_input.xml
+++ b/app/src/main/res/layout/fragment_gender_input.xml
@@ -33,7 +33,8 @@
             android:layout_marginBottom="@dimen/_20sdp"
             app:cardCornerRadius="@dimen/_50sdp"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            app:cardElevation="1dp">
             <TextView
                 android:id="@+id/text_female"
                 android:layout_width="match_parent"
@@ -56,7 +57,8 @@
             android:layout_marginBottom="@dimen/_20sdp"
             app:cardCornerRadius="@dimen/_50sdp"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            app:cardElevation="1dp">
             <TextView
                 android:id="@+id/text_male"
                 android:layout_width="match_parent"
@@ -79,7 +81,8 @@
             android:layout_marginBottom="60dp"
             app:cardCornerRadius="@dimen/_50sdp"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            app:cardElevation="1dp">
             <TextView
                 android:id="@+id/text_other"
                 android:layout_width="match_parent"
