--- a/app/src/main/res/layout/fragment_height_input.xml
+++ b/app/src/main/res/layout/fragment_height_input.xml
@@ -30,7 +30,8 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             app:cardCornerRadius="@dimen/_20sdp"
-            android:layout_marginBottom="@dimen/_5sdp">
+            android:layout_marginBottom="@dimen/_5sdp"
+            app:cardElevation="1dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
