--- a/app/src/main/res/layout/fragment_religion_input.xml
+++ b/app/src/main/res/layout/fragment_religion_input.xml
@@ -53,6 +53,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_christian"
@@ -75,6 +76,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_catholic"
@@ -102,6 +104,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_jewish"
@@ -124,6 +127,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_muslim"
@@ -151,6 +155,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_hindu"
@@ -173,6 +178,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_sikh"
@@ -200,6 +206,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_agnostic"
@@ -222,6 +229,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_buddhist"
@@ -249,6 +257,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_spiritual"
@@ -271,6 +280,7 @@
                     app:cardCornerRadius="@dimen/_50sdp"
                     android:clickable="true"
                     android:focusable="true"
+                    app:cardElevation="1dp"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
                         android:id="@+id/text_others"
