--- a/app/src/main/res/layout/activity_availability_settings.xml
+++ b/app/src/main/res/layout/activity_availability_settings.xml
@@ -44,7 +44,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_20sdp"
-                android:layout_marginEnd="@dimen/_20sdp">
+                android:layout_marginEnd="@dimen/_20sdp"
+                app:cardElevation="1dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -89,11 +90,11 @@
                                 android:layout_height="wrap_content"
                                 android:button="@drawable/circular_checkbox"
                                 android:fontFamily="@font/sf_pro_rounded_regular"
+                                android:onClick="onCheckboxClicked"
                                 android:text="06:00 PM - 07:00 PM"
                                 android:textAlignment="center"
                                 android:textAllCaps="true"
-                                android:textSize="@dimen/_16ssp"
-                                android:onClick="onCheckboxClicked"/>
+                                android:textSize="@dimen/_16ssp" />
 
                             <androidx.appcompat.widget.AppCompatCheckBox
                                 android:id="@+id/fri_slot_2"
@@ -101,11 +102,11 @@
                                 android:layout_height="wrap_content"
                                 android:button="@drawable/circular_checkbox"
                                 android:fontFamily="@font/sf_pro_rounded_regular"
+                                android:onClick="onCheckboxClicked"
                                 android:text="07:00 PM - 08:00 PM"
                                 android:textAlignment="center"
                                 android:textAllCaps="true"
-                                android:textSize="@dimen/_16ssp"
-                                android:onClick="onCheckboxClicked"/>
+                                android:textSize="@dimen/_16ssp" />
 
                             <androidx.appcompat.widget.AppCompatCheckBox
                                 android:id="@+id/fri_slot_3"
@@ -113,11 +114,11 @@
                                 android:layout_height="wrap_content"
                                 android:button="@drawable/circular_checkbox"
                                 android:fontFamily="@font/sf_pro_rounded_regular"
+                                android:onClick="onCheckboxClicked"
                                 android:text="08:00 PM - 09:00 PM"
                                 android:textAlignment="center"
                                 android:textAllCaps="true"
-                                android:textSize="@dimen/_16ssp"
-                                android:onClick="onCheckboxClicked"/>
+                                android:textSize="@dimen/_16ssp" />
 
                         </LinearLayout>
                     </LinearLayout>
@@ -130,7 +131,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_20sdp">
+                android:layout_marginEnd="@dimen/_20sdp"
+                app:cardElevation="1dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -175,11 +177,11 @@
                                 android:layout_height="wrap_content"
                                 android:button="@drawable/circular_checkbox"
                                 android:fontFamily="@font/sf_pro_rounded_regular"
+                                android:onClick="onCheckboxClicked"
                                 android:text="06:00 PM - 07:00 PM"
                                 android:textAlignment="center"
                                 android:textAllCaps="true"
-                                android:textSize="@dimen/_16ssp"
-                                android:onClick="onCheckboxClicked"/>
+                                android:textSize="@dimen/_16ssp" />
 
                             <androidx.appcompat.widget.AppCompatCheckBox
                                 android:id="@+id/sat_slot_2"
@@ -187,11 +189,11 @@
                                 android:layout_height="wrap_content"
                                 android:button="@drawable/circular_checkbox"
                                 android:fontFamily="@font/sf_pro_rounded_regular"
+                                android:onClick="onCheckboxClicked"
                                 android:text="07:00 PM - 08:00 PM"
                                 android:textAlignment="center"
                                 android:textAllCaps="true"
-                                android:textSize="@dimen/_16ssp"
-                                android:onClick="onCheckboxClicked"/>
+                                android:textSize="@dimen/_16ssp" />
 
                             <androidx.appcompat.widget.AppCompatCheckBox
                                 android:id="@+id/sat_slot_3"
@@ -199,11 +201,11 @@
                                 android:layout_height="wrap_content"
                                 android:button="@drawable/circular_checkbox"
                                 android:fontFamily="@font/sf_pro_rounded_regular"
+                                android:onClick="onCheckboxClicked"
                                 android:text="08:00 PM - 09:00 PM"
                                 android:textAlignment="center"
                                 android:textAllCaps="true"
-                                android:textSize="@dimen/_16ssp"
-                                android:onClick="onCheckboxClicked"/>
+                                android:textSize="@dimen/_16ssp" />
 
                         </LinearLayout>
                     </LinearLayout>
@@ -216,7 +218,8 @@
                 android:layout_marginStart="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_20sdp"
-                android:layout_marginBottom="@dimen/_10sdp">
+                android:layout_marginBottom="@dimen/_10sdp"
+                app:cardElevation="1dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -261,11 +264,11 @@
                                 android:layout_height="wrap_content"
                                 android:button="@drawable/circular_checkbox"
                                 android:fontFamily="@font/sf_pro_rounded_regular"
+                                android:onClick="onCheckboxClicked"
                                 android:text="11:00 AM - 12:00 PM"
                                 android:textAlignment="center"
                                 android:textAllCaps="true"
-                                android:textSize="@dimen/_16ssp"
-                                android:onClick="onCheckboxClicked"/>
+                                android:textSize="@dimen/_16ssp" />
 
                             <androidx.appcompat.widget.AppCompatCheckBox
                                 android:id="@+id/sun_slot_2"
@@ -273,11 +276,11 @@
                                 android:layout_height="wrap_content"
                                 android:button="@drawable/circular_checkbox"
                                 android:fontFamily="@font/sf_pro_rounded_regular"
+                                android:onClick="onCheckboxClicked"
                                 android:text="12:00 PM - 01:00 PM"
                                 android:textAlignment="center"
                                 android:textAllCaps="true"
-                                android:textSize="@dimen/_16ssp"
-                                android:onClick="onCheckboxClicked"/>
+                                android:textSize="@dimen/_16ssp" />
 
                         </LinearLayout>
                     </LinearLayout>
